# pystyle

./: .gitignore
docker/jupyterlab/: Dockerfile  docker-compose.yml  jupyter_lab_config.py  requirements.txt
docker/jupyterlab_dl/: Dockerfile  docker-compose.yml  requirements.txt
docker/my_custom_env/: .bashrc  Dockerfile  docker-compose.yml  id_rsa.pub  ipython_kernel_config.py  jupyter_lab_config.py  requirements.txt
docker/my_custom_env/.jupyter/: jupyter_notebook_config.py
docker/my_custom_env/.jupyter/lab/user-settings/: jupyter_lab_config.py
docker/my_custom_env/.jupyter/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
docker/my_custom_env/.jupyter/lab/user-settings/@jupyterlab/console-extension/: tracker.jupyterlab-settings
docker/my_custom_env/.jupyter/lab/user-settings/@jupyterlab/filebrowser-extension/: browser.jupyterlab-settings
docker/my_custom_env/.jupyter/lab/user-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
docker/ssh_passwd/: Dockerfile  docker-compose.yml
docker/ssh_pubkey/: .gitignore  Dockerfile  docker-compose.yml
opencv-mask-image/: opencv-mask-image.py
perform-face-detection-with-python/: perform-face-detection-with-python.py
perform-face-recognition-with-python/: perform-face-recognition-with-python.py
pytorch/pytorch-cnn-based-classification-model-with-fashion-mnist/: pytorch-cnn-based-classification-model-with-fashion-mnist.py
qt/widget/: CMakeLists.txt
qt/widget/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
(+1 files in other folders)
